--- a/projects/03-todo-app/backend/package.json
+++ b/projects/03-todo-app/backend/package.json
@@ -9,6 +9,7 @@
   "author": "princebansal7",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
