--- a/react-js/28.react-custom-hooks/02.custom-data-fetching-hook/package.json
+++ b/react-js/28.react-custom-hooks/02.custom-data-fetching-hook/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^1.7.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
