--- a/typescript/10.Advance-ts-api/package.json
+++ b/typescript/10.Advance-ts-api/package.json
@@ -8,5 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/express": "^5.0.0",
+    "express": "^4.21.1",
+    "zod": "^3.23.8"
+  }
 }
